--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name*</label>
+		<input type="text" id="name" required><br>
+		<label for="email">Email*</label>
+		<input type="email" id="email" required><br>
+		<label for="gender">Gender*</label>
+		<input type="radio" name="gender" required>Male
+		<input type="radio" name="gender">Female<br>
+		<label for="brands">Laptop Brands</label>
+		<select>
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
+		</select>
+		<br>
+		<label for="age">Age*</label>
+		<input type="number" id="age" required><br>
+		<label for="dob">DOB*</label>
+		<input type="date" id="dob" required><br>
+		<label for="password">Password*</label>
+		<input type="password" id="password" required><br>
+		<button value="submit">submit button
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
