--- a/main.html
+++ b/main.html
@@ -29,7 +29,8 @@
 		<input type="date" id="dob" required><br>
 		<label for="password">Password*</label>
 		<input type="password" id="password" required><br>
-		<button value="submit">submit button
+		<button value="submit">submit button</button>
+		
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
