--- a/main.html
+++ b/main.html
@@ -29,8 +29,9 @@
 		<input type="date" id="dob" required><br>
 		<label for="password">Password*</label>
 		<input type="password" id="password" required><br>
-		<button value="submit">submit button</button>
-		
+		<button value="submit">submit button</button><br>
+		<label for="portfolio">Portfolio</label>
+		<input type="url" id=portfolio>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
