--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<label for="gender">Gender*</label>
 		<input type="radio" name="gender" required>Male
 		<input type="radio" name="gender">Female<br>
-		<label for="brands">Laptop Brands</label>
+		<label for="laptop">Laptop Brands</label>
 		<select>
 			<option>Apple</option>
 			<option>Asus</option>
