--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<input type="radio" name="gender" required>Male
 		<input type="radio" name="gender">Female<br>
 		<label for="laptop">Laptop Brands</label>
-		<select>
+		<select id="laptop">
 			<option>Apple</option>
 			<option>Asus</option>
 			<option>HP</option>
