--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 		<input type="date" id="dob" required><br>
 		<label for="password">Password*</label>
 		<input type="password" id="password" required><br>
-		<button value="submit">submit button</button><br>
+		<button type="submit">submit button</button><br>
 		<label for="portfolio">Portfolio</label>
 		<input type="url" id=portfolio>
 	</form>
